fix: increase title lineheight to avoid overlap on mobile devices

--- a/client/styles/components/_index.scss
+++ b/client/styles/components/_index.scss
@@ -58,13 +58,15 @@ svg, path {
 .title {
   font-size: 2rem;
   font-weight: 700;
+  line-height: 2rem;
 }
 
 .language {
   text-transform: uppercase;
   font-size: .8rem;
-  margin-bottom: -.5rem;
   font-weight: 700;
+  margin-bottom: -.5rem;
+  margin-top: -.5rem;
 }
 
 .summary {
